--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,31 @@ body{
   left: 65px;
   background: #23252C;
 }
+
+.container--right{
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: lightgray;
+  width: 300px;
+  height: 600px;
+  margin: 10px;
+  display: inline-block;
+
+}
+.container--left{
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: lightgray;
+  width: 300px;
+  height: 600px;
+  margin: 10px;
+ 
+  display: inline-block;
+
+}
+.flex--container{
+  width: 50vw;
+  margin-top: 60px;
+  margin-left: 280px;
+
+}
