--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,13 @@ body{
   left: 65px;
   background: #23252C;
 }
-
-.container--right{
-  border: 2px solid black;
-  border-radius: 10px;
-  background-color: lightgray;
-  width: 300px;
-  height: 600px;
-  margin: 10px;
-  display: inline-block;
+.flex--container{
+  width: 50vw;
+  margin-top: 60px;
+  margin-left: 280px;
 
 }
+
 .container--left{
   border: 2px solid black;
   border-radius: 10px;
@@ -31,9 +27,23 @@ body{
   display: inline-block;
 
 }
-.flex--container{
-  width: 50vw;
-  margin-top: 60px;
-  margin-left: 280px;
+
+section.div--img1{
+  width: 20px;
+  display: block;
+  background-color: blueviolet;
 
 }
+
+.container--right{
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: rgb(255, 10, 10);
+  width: 300px;
+  height: 600px;
+  margin: 10px;
+  display: inline-block;
+
+}
+
+
