--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;600;700&display=swap');
 ::-webkit-scrollbar{
+
   width: 0px;
   height: 0px;
+}
+*{
+  font-family: 'Inter', sans-serif;
 }
 body{
   position: absolute;
