--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,22 @@ body{
 .job{
   color:#F3BF99 ;
 }
+/* ? Buttons  */
+
+.btn-group{
+  margin: 10% 10% 10% 16%;
+}
+.btn-group button {
+  background-color: #04AA6D; /* Green background */
+  border: 1px solid green; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+  margin-right: 10px;
+}
+
+
+
+
+
