--- a/src/App.css
+++ b/src/App.css
@@ -53,20 +53,43 @@ body{
 }
 /* ? Buttons  */
 
-.btn-group{
-  margin: 10% 10% 10% 16%;
+.btn--email{
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 9px 13px 9px 11px;
+gap: 8px;
+position: absolute;
+width: 115px;
+height: 34px;
+left: 323px;
+top: 410px;
+background: #FFFFFF;
+border: 1px solid #D1D5DB;
+box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+border-radius: 6px;
 }
-.btn-group button {
-  background-color: #04AA6D; /* Green background */
-  border: 1px solid green; /* Green border */
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  float: left; /* Float the buttons side by side */
-  margin-right: 10px;
+
+.btn--link{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9px 13px 9px 11px;
+  gap: 8px;
+  position: absolute;
+  width: 115px;
+  height: 37px;
+  left: 448px;
+  top: 410px;
+  background: #5093E2;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
 }
 
-
-
+i{
+  color: #23252C;
+}
 
 
