--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body{
   border-radius: 10px;
   background-color: #1A1B21;
   width: 300px;
-  height: 600px;
+  height: 650px;
   margin: 10px;
  
   display: inline-block;
@@ -86,6 +86,13 @@ border-radius: 6px;
   background: #5093E2;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
+}
+
+/* ? About Page! */
+.div--about{
+  color: white;
+  font-size: small;
+  margin-top: 90px;
 }
 
 
