--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,15 @@ border-radius: 6px;
   font-size: 13px;
   margin-left: 30px;
 }
+
+/* ? Footer */
+.footer--page{
+  position: absolute;
+  width: 300px;
+  height: 64px;
+  left: 290px;
+  top: 655px;
+
+  background: #161619;
+  border-radius: 0px 0px 10px 10px;
+}
