--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,39 @@ border-radius: 6px;
   background: #161619;
   border-radius: 0px 0px 10px 10px;
 }
+
+.fa {
+  background-color: white;
+  padding: 5px;
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 15px 0px 5px 35px ;
+  border-radius: 3px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #918E9B;
+  color: #161619;
+}
+
+.fa-twitter {
+  background: #918E9B;
+  color: #161619;
+}
+
+.fa-instagram {
+  background: #918E9B;
+  color: #161619;
+}
+
+.fa-github {
+  background: #918E9B;
+  color: #161619;
+}
