--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,18 @@ border-radius: 6px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
 }
+#email{
+  font-size: 15px;
+  width: 15px;
+  height: 15px;
+  color: #676e75;
+  background: white;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px 0px 10px 5px ;
+  border-radius: 3px;
+
+}
 
 /* ? About Page! */
 .div--about{
